WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285413
[css-images-4] Gradients with only one stop should be supported
https://bugs.webkit.org/show_bug.cgi?id=285413
Summary
[css-images-4] Gradients with only one stop should be supported
Tim Nguyen (:ntim)
Reported
2025-01-05 22:50:54 PST
See
https://github.com/w3c/csswg-drafts/issues/10092
and
https://bugzilla.mozilla.org/show_bug.cgi?id=1900530
This should only apply to unprefixed gradients. Source/WebCore/css/parser/CSSPropertyParserConsumer+Image.cpp is where this code is.
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2025-01-07 14:26:04 PST
***
Bug 285546
has been marked as a duplicate of this bug. ***
jsnkuhn
Comment 2
2025-01-08 04:54:47 PST
Chromium issue:
https://issues.chromium.org/issues/344620213
Radar WebKit Bug Importer
Comment 3
2025-01-12 22:51:14 PST
<
rdar://problem/142796999
>
Karl Dubost
Comment 4
2025-01-22 18:34:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39421
roberto_rodriguez2
Comment 5
2025-01-24 22:39:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39545
EWS
Comment 6
2025-01-28 15:10:35 PST
Committed
289469@main
(8c3641653fb0): <
https://commits.webkit.org/289469@main
> Reviewed commits have been landed. Closing PR #39545 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug