[css-images-4] Gradients with only one stop should be supported https://bugs.webkit.org/show_bug.cgi?id=285413 rdar://142796999

Reviewed by NOBODY (OOPS!).

This makes it possible to have one stop color gradient
as resolved by the CSS Working Group in
https://github.com/w3c/csswg-drafts/issues/10092

This also import the new tests related to css-images/gradient/ with
Upstream commit: https://github.com/web-platform-tests/wpt/commit/5753f6c47848533fd5ee743876da12e37e400955

* LayoutTests/imported/w3c/resources/resource-files.json:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/color-stops-parsing-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/color-stops-parsing.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-decreasing-hue-hsl-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-decreasing-hue-hsl-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-decreasing-hue-hsl.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-decreasing-hue-lch-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-decreasing-hue-lch-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-decreasing-hue-lch.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-hue-direction-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-hue-direction-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-hue-direction.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-increasing-hue-hsl-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-increasing-hue-hsl-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-increasing-hue-hsl.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-increasing-hue-lch-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-increasing-hue-lch-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-increasing-hue-lch.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-001-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-002-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-003-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-003-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-003.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-004-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-004-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-004.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-005-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-005-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-005.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-006-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-006-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-006.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-007-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-007-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-007.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-008-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-008-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-008.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-009-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-009-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-009.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-010-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-010-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-010.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-011-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-011-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-011.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-012-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-012-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-hsl-012.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-001-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-002-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-003-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-003-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-003.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-004-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-004-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-004.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-005-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-005-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-005.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-006-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-006-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-006.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-007-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-007-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-007.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-008-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-008-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-008.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-009-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-009-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-009.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-010-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-010-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-010.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-011-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-011-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-011.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-012-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-012-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-longer-hue-lch-012.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-003-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-003.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-004-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-004.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-005-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-005.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-006-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-006.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-007-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-007.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-008-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-008.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-hsl-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-hsl-002-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-hsl-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-hsl-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-hsl-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-hsl.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-oklch-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-oklch-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/gradient-single-stop-longer-hue-oklch.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-images/gradient/w3c-import.log:
* LayoutTests/TestExpectations:
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Image.cpp:
(WebCore::CSSPropertyParserHelpers::consumeColorStopList):